--- a/project1/index.html
+++ b/project1/index.html
@@ -3,38 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="What about Teamwork, How to build good Teamwork">
+	<meta name="keywords" content="Teamwork, Teammate">
+	<link rel="stylesheet" href="index.css">
 	<title>Teamwork</title>
 </head>
 
 <body>
-		<style>
-				body{
-					background-image: url("wall.jpg");
-				}
-				h1{
-					font-size: 40px;
-					color: darkorange;
-					text-align: center;
-				}
-				p{
-					font-family: arial;
-					font-size: 20px;
-					text-align: center;
-					color: orange;
-				}
-				ol#mainbody li,a{
-					padding: 12px;
-					font-size: 30px;
-					color: white;
-
-				}
-		</style>
 		<h1>What is teamwork?</h1>
 		<p>Teamwork is generally understood as the willingness of a group of people to work together to achieve a common aim.</p>
 		<ol id="mainbody">
-			<li><a href="commu.html">Communication</a></li>
+			<li><a href="./pages/commu/commu.html">Communication</a></li>
 			<li><a href="time.html">Time management</a></li>
-			<li><a href="pro.hmt">Problem-solving</a></li>
+			<li><a href="problem.hmtl">Problem-solving</a></li>
 			<li><a href="thinking.html">Critical thinking</a></li>
 			<li><a href="leader.html">Leadership</a></li>
 		</ol>
