--- a/project1/index.html
+++ b/project1/index.html
@@ -14,10 +14,10 @@
 		<p>Teamwork is generally understood as the willingness of a group of people to work together to achieve a common aim.</p>
 		<ol id="mainbody">
 			<li><a href="./pages/commu/commu.html">Communication</a></li>
-			<li><a href="time.html">Time management</a></li>
-			<li><a href="problem.hmtl">Problem-solving</a></li>
-			<li><a href="thinking.html">Critical thinking</a></li>
-			<li><a href="leader.html">Leadership</a></li>
+			<li><a href="./pages/leader/leader.html">Leadership</a></li>
+			<li><a href="./pages/problem/problem.hmtl">Problem-solving</a></li>
+			<li><a href="./pages/thinking/thinking.html">Critical thinking</a></li>
+			<li><a href="./pages/time/time.html">Time management</a></li>
 		</ol>
 </body>
 </html>
