--- a/project1/index.html
+++ b/project1/index.html
@@ -12,12 +12,14 @@
 <body>
 		<h1>What is teamwork?</h1>
 		<p>Teamwork is generally understood as the willingness of a group of people to work together to achieve a common aim.</p>
-		<ol id="mainbody">
-			<li><a href="./pages/commu/commu.html">Communication</a></li>
-			<li><a href="./pages/leader/leader.html">Leadership</a></li>
-			<li><a href="./pages/problem/problem.hmtl">Problem-solving</a></li>
-			<li><a href="./pages/thinking/thinking.html">Critical thinking</a></li>
-			<li><a href="./pages/time/time.html">Time management</a></li>
-		</ol>
+		<nav>
+			<ul>
+				<li><a class="page" href="./pages/commu/commu.html" target="_self">Communication</a></li>
+				<li><a class="page" href="./pages/leader/leader.html" target="_self">Leadership</a></li>
+				<li><a class="page" href="./pages/problem/problem.html" target="_self">Problem-solving</a></li>
+				<li><a class="page" href="./pages/thinking/thinking.html" target="_self">Critical thinking</a></li>
+				<li><a class="page" href="./pages/time/time.html" target="_self">Time management</a></li>
+			</ul>
+		</nav>
 </body>
 </html>
