--- a/project1/pages/commu/commu.html
+++ b/project1/pages/commu/commu.html
@@ -15,32 +15,20 @@
 		<h3><span style="border: 4px solid lightblue">Important communication skills:</span></h3>
 		<div id="commu">
 		<ul>
-			<section>
-				<li>Emotional Intelligence</li>
-				<p>It is the ability to understand, use, and manage your own emotions in positive ways to relieve stress, communicate effectively, empathize with others, overcome challenges and defuse conflict.</p>
-			</section>
-			<section>
-				<li>Cohesion and Clarity</li>
-				<p>Clarity = clear and easy to understand. Cohesion = sticking together.</p>
-			</section>
-			<section>
-				<li>Friendliness</li>
-				<p>It is the ability to put up a warm personality that makes you approachable, easy to relate with and without any hostility. Aside being warm and devoid of hostility, a friendly person is someone who has a great level of respect for others.</p>
-			</section>
-			<section>
-				<li>Confidence</li>
-				<p>Confidence is about having a belief and positive regard for yourself and your ability to succeed.</p>
-			</section>
-			<section>
-				<li>Respect</li>
-				<p>Respect is a way of treating or thinking about something or someone. If you respect your teacher, you admire her and treat her well.</p>
-			</section>
-			<section>
-				<li>Listening</li>
-				<p>Listening is the ability to accurately receive and interpret messages in the communication process. Listening is key to all effective communication. Without the ability to listen effectively, messages are easily misunderstood</p>
-			</section>
+			<li>Emotional Intelligence</li>
+			<p>It is the ability to understand, use, and manage your own emotions in positive ways to relieve stress, communicate effectively, empathize with others, overcome challenges and defuse conflict.</p>
+			<li>Cohesion and Clarity</li>
+			<p>Clarity = clear and easy to understand. Cohesion = sticking together.</p>
+			<li>Friendliness</li>
+			<p>It is the ability to put up a warm personality that makes you approachable, easy to relate with and without any hostility. Aside being warm and devoid of hostility, a friendly person is someone who has a great level of respect for others.</p>
+			<li>Confidence</li>
+			<p>Confidence is about having a belief and positive regard for yourself and your ability to succeed.</p>
+			<li>Respect</li>
+			<p>Respect is a way of treating or thinking about something or someone. If you respect your teacher, you admire her and treat her well.</p>
+			<li>Listening</li>
+			<p>Listening is the ability to accurately receive and interpret messages in the communication process. Listening is key to all effective communication. Without the ability to listen effectively, messages are easily misunderstood</p>
 		</ul>
 		</div>
-		<a href="../../index.html">Return Page 1</a>
+		<a href="../../index.html" target="_self">Return Page 1</a>
 </body>
 </html>
