--- a/project1/index.html
+++ b/project1/index.html
@@ -11,7 +11,7 @@
 
 <body>
 		<h1>What is teamwork?</h1>
-		<p>Teamwork is generally understood as the willingness of a group of people to work together to achieve a common aim.</p>
+		<section>Teamwork is generally understood as the willingness of a group of people to <p class="special">work together</p> to achieve a common aim.</section>
 		<nav>
 			<ul>
 				<li><a class="page" href="./pages/commu/commu.html" target="_self">Communication</a></li>
