--- a/project1/index.html
+++ b/project1/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="What about Teamwork, How to build good Teamwork">
 	<meta name="keywords" content="Teamwork, Teammate">
 	<link rel="stylesheet" href="index.css">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<title>Teamwork</title>
 </head>
 
@@ -13,6 +14,10 @@
 		<h1>What is teamwork?</h1>
 		<section>Teamwork is generally understood as the willingness of a group of people to <p class="special">work together</p> to achieve a common aim.</section>
 		<nav>
+			<input type="checkbox" id="check" name="Home">
+			<label for="check" class="checkbtn">
+				<i class="fas fa-bars"></i>
+			</label>
 			<ul>
 				<li><a class="page" href="./pages/commu/commu.html" target="_self">Communication</a></li>
 				<li><a class="page" href="./pages/leader/leader.html" target="_self">Leadership</a></li>
