--- a/project1/pages/commu/commu.html
+++ b/project1/pages/commu/commu.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="commu.css">
+	<script src="https://kit.fontawesome.com/1c640393db.js" crossorigin="anonymous"></script>
 	<title>Communicate</title>
 </head>
 <body>	
@@ -53,6 +54,8 @@
 			</li>
 		</ul>
 		</div>
-		<a href="../../index.html" target="_self">Return Page 1</a>
+		<a href="../../index.html" target="_self">
+			<i class="fas fa-home"></i>
+		</a>
 </body>
 </html>
