--- a/project1/pages/problem/problem.html
+++ b/project1/pages/problem/problem.html
@@ -43,7 +43,7 @@
 						type="email" 
 						id="email" 
 						name="email" 
-						pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
+						pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
 						title="Email must be more than 2 characters or more and contain only letters, numbers and periods (.)"
 						placeholder="quyanh123@gmail.com"
 						required
